--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,18 +1,10 @@
 /*@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");*/
 
 @font-face {
-  font-family: 'Inter';
-  src: url('@/assets/fonts/Inter-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Calibri';
+  src: url('@/assets/fonts/calibri.ttf') format('truetype');
 }
 
-@font-face {
-  font-family: 'Inter';
-  src: url('@/assets/fonts/Inter-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-}
 /*============================================================
 [Master Stylesheet]
 Theme Name:            Digiboard - Admin & Dashboard HTML Template
@@ -345,7 +337,7 @@ body {
   background-position: center center;
   background-attachment: fixed;
   background-color: #071739;
-  font-family: "Inter", sans-serif;
+  font-family: 'Calibri', sans-serif;
   color: #c8d4f0;
   position: relative;
   z-index: 2;
@@ -843,7 +835,7 @@ input[type=checkbox] {
   height: 30px;
   line-height: 30px;
   color: #c4c4c4;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-weight: 400;
   font-size: 12px;
 }
@@ -1584,7 +1576,7 @@ input[type=checkbox] {
   border-color: rgba(255, 255, 255, 0.1);
 }
 .modal .modal-header .modal-title {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 20px;
   line-height: 100%;
   font-weight: 500;
@@ -1827,7 +1819,7 @@ input[type=checkbox] {
   transition: 0.3s;
 }
 .panel .panel-header h5 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 20px;
   line-height: 60px;
   font-weight: 500;
@@ -3368,7 +3360,7 @@ pre .punctuation {
 }
 
 .header-right-btns .header-btn-box .message-dropdown a .msg-txt span.msg-short {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #8b97b2;
@@ -3416,7 +3408,7 @@ pre .punctuation {
 }
 
 .header-right-btns .header-btn-box .notification-dropdown a .notification-txt {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   width: calc(100% - 50px);
   font-size: 14px;
   line-height: 100%;
@@ -3998,7 +3990,7 @@ pre .punctuation {
   color: #fff;
 }
 .right-sidebar .sidebar-title h3 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 16px;
   line-height: 40px;
   font-weight: 600;
@@ -4116,7 +4108,7 @@ pre .punctuation {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 12px;
   line-height: 16px;
   font-weight: 300;
@@ -5268,7 +5260,7 @@ pre .punctuation {
   color: #fff;
 }
 .sidebar-menu .help-center h3 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 24px;
   line-height: 100%;
   font-weight: 600;
@@ -5514,7 +5506,7 @@ pre .punctuation {
   background: transparent;
 }
 .main-content.login-panel.login-panel-2 .panel-title {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 40px;
   line-height: 100%;
   font-weight: 400;
@@ -5598,7 +5590,7 @@ pre .punctuation {
           justify-content: space-between;
 }
 .main-content .dashboard-breadcrumb h2 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 24px;
   line-height: 19px;
   font-weight: 600;
@@ -5611,7 +5603,7 @@ pre .punctuation {
   border-radius: 3px;
 }
 .main-content .dashboard-filter .form-control {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   width: auto;
   display: inline;
   border-radius: 3px 0 0 3px;
@@ -6023,7 +6015,7 @@ pre .punctuation {
   width: calc(100% - 75px);
 }
 .main-content .new-customer-table .new-customer .part-txt p {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 18px;
   line-height: 100%;
   font-weight: 500;
@@ -6040,7 +6032,7 @@ pre .punctuation {
 .main-content .recent-order-table {
   max-width: 100%;
   width: 100% !important;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   border-bottom: 0 !important;
   color: #c8d4f0;
   font-size: 14px;
@@ -6722,7 +6714,7 @@ pre .punctuation {
   height: 25px;
 }
 .main-content .profile-sidebar-title {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 18px;
   line-height: 100%;
   font-weight: 600;
@@ -6733,7 +6725,7 @@ pre .punctuation {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 16px;
   line-height: 100%;
   font-weight: 500;
@@ -6790,7 +6782,7 @@ pre .punctuation {
   width: calc(100% - 160px);
 }
 .main-content .profile-sidebar .top .part-txt h4 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 18px;
   line-height: 100%;
   font-weight: 600;
@@ -6817,7 +6809,7 @@ pre .punctuation {
   color: #dfdfdf;
 }
 .main-content .profile-sidebar .bottom {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   overflow: hidden;
 }
 .main-content .profile-sidebar .bottom ul {
@@ -6946,7 +6938,7 @@ pre .punctuation {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 16px;
   line-height: 100%;
   font-weight: 500;
@@ -6992,7 +6984,7 @@ pre .punctuation {
 }
 .main-content .profile-edit-tab .admin-profile .admin-name {
   display: block;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 18px;
   line-height: 100%;
   font-weight: 600;
@@ -7445,7 +7437,7 @@ pre .punctuation {
   line-height: 40px;
   border-radius: 3px 3px 0 0;
   color: #c8d4f0;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   text-transform: capitalize;
   font-size: 16px;
   -webkit-transition: 0.3s;
@@ -7486,7 +7478,7 @@ pre .punctuation {
   font-size: 14px;
 }
 .main-content .file-manager-settings-subtitle {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 100%;
   letter-spacing: 1px;
@@ -7507,7 +7499,7 @@ pre .punctuation {
 }
 .main-content .used-storage {
   display: block;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 100%;
   color: #c4c4c4;
@@ -7546,10 +7538,10 @@ pre .punctuation {
   margin-bottom: 0;
 }
 .main-content .perma-txt .site-link {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
 }
 .main-content .perma-txt input {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   width: 160px;
   display: inline-block;
 }
@@ -7579,7 +7571,7 @@ pre .punctuation {
   margin-bottom: 20px;
 }
 .main-content .product-image-upload .part-txt h5 {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 18px;
   line-height: 100%;
   font-weight: 500;
@@ -7620,7 +7612,7 @@ pre .punctuation {
 .main-content .jquery-uploader-preview-container .jquery-uploader-select-card .upload-button,
 .main-content .jquery-uploader-preview-container .jquery-uploader-card .upload-button {
   height: auto;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 12px;
   color: #97a3bb;
 }
@@ -7669,7 +7661,7 @@ pre .punctuation {
 }
 .main-content .product-data-tab .input-additional-txt {
   display: block;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 100%;
   color: #8b97b2;
@@ -7714,7 +7706,7 @@ pre .punctuation {
 }
 .main-content .product-tag-area .input-txt {
   display: block;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 100%;
   color: #97a3bb;
@@ -7738,7 +7730,7 @@ pre .punctuation {
 .main-content .product-tag-area .all-tags .item {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 3px;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   color: #97a3bb;
   font-size: 14px;
   height: 25px;
@@ -7780,7 +7772,7 @@ pre .punctuation {
 .main-content .digi-dataTable {
   max-width: 100%;
   width: 100% !important;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   border-bottom: 0 !important;
   color: #c8d4f0;
   font-size: 14px;
@@ -7937,7 +7929,7 @@ pre .punctuation {
   color: #F0C434;
 }
 .main-content .product-table-quantity ul {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8022,7 +8014,7 @@ pre .punctuation {
   padding: 30px;
 }
 .main-content .invoice .invoice-header .shop-address {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 16px;
   line-height: 1.3;
   letter-spacing: 0.5px;
@@ -8045,7 +8037,7 @@ pre .punctuation {
   margin-bottom: -6px;
 }
 .main-content .invoice .info-card ul li {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 1.6;
 }
@@ -8235,7 +8227,7 @@ pre .punctuation {
   line-height: 100%;
 }
 .main-content .chatting-panel .message-list .single-message .part-txt .msg-short {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 13px;
   line-height: 1.3;
 }
@@ -8358,7 +8350,7 @@ pre .punctuation {
   line-height: 100%;
 }
 .main-content .chatting-panel .chatting-area .chat-top-bar .user .part-txt .active-status {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 12px;
   line-height: 100%;
   padding-left: 13px;
@@ -8446,7 +8438,7 @@ pre .punctuation {
 .main-content .chatting-panel .msg-area .day-divider span {
   display: inline-block;
   color: #c8d4f0;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 100%;
   position: relative;
@@ -8599,7 +8591,7 @@ pre .punctuation {
   opacity: 1;
 }
 .main-content .chatting-panel .msg-area .single-message .msg-box .msg-box-inner p {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 13px;
   letter-spacing: 0.5px;
   color: #F9F9F9;
@@ -9458,7 +9450,7 @@ pre .punctuation {
 }
 .dropzone .dz-preview .dz-details {
   padding: 10px;
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 12px;
   min-height: 100%;
   display: -webkit-box;
@@ -9488,7 +9480,7 @@ pre .punctuation {
   padding-bottom: 10px;
 }
 .file-details li {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   line-height: 100%;
   color: #c8d4f0;
   margin-top: -3px;
@@ -10042,7 +10034,7 @@ a.ck.ck-button:focus {
   margin-bottom: -5px;
 }
 .mail-details .single-mail .mail-body p {
-  font-family: "Inter", sans-serif;
+  font-family: "Calibri", sans-serif;
   font-size: 14px;
   line-height: 1.4;
   margin-top: -5px;
