--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6373,7 +6373,7 @@ pre .punctuation {
   top: 0;
   left: 0;
   width: 450px;
-  height: calc(100% - 45px);
+  height: 100%;
   padding: 100px 60px;
   z-index: 2;
 }
@@ -6402,11 +6402,11 @@ pre .punctuation {
 .main-content .steps-sidebar .sidebar-logo {
   -webkit-filter: brightness(10);
           filter: brightness(10);
-  height: 25px;
+  height: 50px;
   margin-bottom: 50px;
 }
 .main-content .steps-sidebar .sidebar-content {
-  height: calc(100% - 75px);
+  height: 100%;
 }
 .main-content .steps-sidebar .sidebar-content .step-list {
   padding-right: 10px;
@@ -6442,19 +6442,19 @@ pre .punctuation {
 }
 .main-content .steps-sidebar .sidebar-content .step-list li.completed .step-number::after {
   content: "\f00c";
-  color: #2d893a;
-  background: #d1e7dd;
-  border-color: rgba(45, 137, 58, 0.5);
+  color: #034f75;
+  background: #d3e7f0;
+  border-color: #034f75;
   border-style: solid;
   opacity: 1;
 }
 .main-content .steps-sidebar .sidebar-content .step-list li.active .step-number {
-  color: #2d893a;
+  color: #034f75;
   z-index: 2;
 }
 .main-content .steps-sidebar .sidebar-content .step-list li.active .step-number::after {
-  background: #d1e7dd;
-  border-color: rgba(45, 137, 58, 0.5);
+  background: #d3e7f0;
+  border-color: #034f75;
   opacity: 1;
   z-index: -1;
 }
