forget password and update password added

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -16,7 +16,7 @@
 
 .main-content .login-body .login-btn {
     background: #034f75;
-    width: 50%;
+    width: 50% !important;
     border-radius: 20px;
 }
 
