--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -101,7 +101,6 @@ table thead th:last-child {
 
 table tbody tr td {
     background: white !important;
-    color: red;
 }
 
 .table-striped > tbody > tr:nth-of-type(odd) > * {
@@ -138,4 +137,88 @@ table tbody tr td {
 .main-content .table-bottom-control .btn.current {
     background: #034f75 !important;
     color: #FFFFFF !important;
+}
+
+.header{
+    position: relative !important;
+    margin-left: 25px !important;
+    margin-right: 25px !important;
+    border-radius: 15px !important;
+    background: #FFFFFF !important;
+}
+
+.body-p-top {
+    padding-top: 25px !important;
+}
+
+.main-sidebar{
+    top: 25px !important;
+    left: 25px !important;
+    bottom: 25px !important;
+    border-radius: 22px !important;
+    overflow: hidden !important;
+}
+
+.body-padding {
+    padding-left: 295px !important;
+}
+
+.light-theme .main-content::after {
+    opacity: unset !important;
+    background: #d3e7f0 !important;
+}
+
+.light-theme .main-sidebar{
+    background: #034f75 !important;
+}
+.main-sidebar::after{
+    width: unset !important;
+}
+
+.light-theme .sidebar-item .sidebar-link .nav-icon, .light-theme .sidebar-item .sidebar-dropdown-item .sidebar-link {
+    color: #FFFFFF;
+}
+
+.sidebar-item{
+    border: unset !important;
+    font-weight: 700;
+}
+
+.sidebar-item .sidebar-dropdown-item .sidebar-link:hover, .sidebar-item .sidebar-dropdown-item .sidebar-link.active{
+    background: #FFFFFF;
+    color: #034f75;
+    border-radius: 44px;
+}
+
+.light-theme .sidebar-item .sidebar-dropdown-item .sidebar-link:hover .nav-icon, .light-theme .sidebar-item .sidebar-dropdown-item .sidebar-link.active .nav-icon{
+    color: #034f75;
+}
+
+.light-theme .sidebar-item .sidebar-link .nav-icon:hover, .light-theme .sidebar-item .sidebar-dropdown-item .sidebar-link:hover{
+    background: #034f75;
+    color: #FFFFFF;
+    .nav-icon{
+        color: #FFFFFF;
+    }
+}
+
+.primary-font{
+    color: #034f75;
+}
+
+.light-theme .header-right-btns .header-form{
+    background: #d3e7f0;
+    border-radius: 44px;
+    color: #034f75;
+}
+
+.light-theme .header-right-btns .header-form input{
+    color: #034f75;
+}
+
+.header-right-btns .header-form:focus-within{
+    border: unset !important;
+}
+[type=search]::placeholder{
+    color: #034f75;
 }
