--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -222,3 +222,9 @@ table tbody tr td {
 [type=search]::placeholder{
     color: #034f75;
 }
+
+.avatar img {
+    border-radius: 50%;
+    width: 90%;
+    height: 90%;
+}
